<resources>
    <string name="app_name">泰达时尚家园</string>
    <string name="title_activity_app_start">AppStartActivity</string>
    <string name="title_activity_appstart">AppstartActivity</string>
    <string name="action_settings">settings</string>
    <string name="login">登录</string>
    <string name="wx_login">微信登录</string>
    <string name="set_up">注册账号</string>
    <string name="register">注册</string>
    <string name="or">------------------ OR ------------------</string>
    <string name="main">首页</string>
    <string name="intro">泰达时尚家园</string>
    <string name="companyname">天津泰达有线电视网络有限公司</string>
    <string name="companyurl"><a href="#" mce_href="#">http://www.bhdtv.net/</a></string>
    <string name="addequipment">添加设备</string>
    <string name="addonline">智能联机</string>
    <string name="equipmentlist">设备列表</string>
    <string name="register_format">密码长度要大于6位小于30位</string>
    <string name="newuser"><a href="#" mce_href="#">我是新用户</a></string>
    <string name="waite_for_linke">Loading...</string>
    <string name="smarttitle">连接好电源</string>
    <string name="smartlinkinfo">接通电源，等待摄像头发出连接提示音</string>
    <string name="smartlinkinfo2">如果没有听到连接提示音，请将摄像头复位"</string>
    <string name="smartlink_network">摄像头需要连接的Wi-Fi(暂不支持5G网络)</string>
    <string name="link">正在连接中...</string>
    <string name="wait_link">请耐心等待，马上就要连接成功了.</string>
    <string name="twitter">在这里与邻里之间愉快的交流吧!~(字数：60字以内)</string>
    <string name="feedback">对我们有什么意见或建议欢迎反馈!~(50字以内)</string>

    <!--一米菜园的字符集-->
    <string name="home">首页</string>
    <string name="classify">分类</string>
    <string name="shoppcart">购物车</string>
    <string name="my">我的</string>
    <string name="abaout">为了能准确将蔬菜送到您的手里请将个人信息填写完整！</string>

    <string name="bind_wx">绑定微信</string>
    <string name="text_wx">绑定已有账号?</string>
    <string name="cancel">取消</string>

    <!--调查问卷选项-->
    <string name="seq1">经常参加</string>
    <string name="seq2">有时参加</string>
    <string name="seq3">没有参加</string>
    <string name="seq4">没有举办</string>

    <string name="submit">提交</string>

    <string name="hint">没有设备请添加</string>

    <string name="wx_name">微信用户</string>
    <string name="contactphone">联系电话</string>
    <string name="community">小区名称</string>
    <string name="shippingaddress">默认送货地址</string>
    <string name="contact">联系人</string>
    <string name="phone">电话</string>

    <string name="userinfo">个人中心</string>

    <string name="addsensor">传感器</string>
    <string name="control">遥控</string>
    <string name="specialsensor">特殊传感器</string>
</resources>
