<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:id="@+id/headlayout"
    android:fitsSystemWindows="true">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/icon_img"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_launcher"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/companyname"
        android:layout_below="@+id/intro"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/icon_img"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/companyurl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/companyurl"
        android:layout_below="@+id/name"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:textIsSelectable="true"
        android:onClick="open"
        android:layout_marginTop="5dp"/>
</RelativeLayout>