<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/surveyquesition_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12313"
        android:textColor="@color/blackmin"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"/>

    <LinearLayout
        android:id="@+id/seq1_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/surveyquesition_title"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seq1"/>
        <CheckBox
            android:id="@+id/checkbox01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/checkedstyle"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/seq2_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/surveyquesition_title"
        android:orientation="horizontal"
        android:layout_toRightOf="@+id/seq1_linear"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seq2"/>
        <CheckBox
            android:id="@+id/checkbox02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/checkedstyle"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/seq3_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/surveyquesition_title"
        android:orientation="horizontal"
        android:layout_toRightOf="@+id/seq2_linear"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seq2"/>
        <CheckBox
            android:id="@+id/checkbox03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/checkedstyle"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/seq4_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/surveyquesition_title"
        android:orientation="horizontal"
        android:layout_toRightOf="@+id/seq3_linear"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seq3"/>
        <CheckBox
            android:id="@+id/checkbox04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/checkedstyle"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/linecolor"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>